fixes bug with readme, indents css, and tidys up footer

--- a/index.html
+++ b/index.html
@@ -161,27 +161,31 @@
 				<div id="about" class="container">
 					<h2 class="sectionHeading">A little bit about me..<span class="animate">.</span></h2>	
 					<div class="row">
-						<div class="col-sm-6">
-							<div class="card">
+						<div class="col-sm-3 col-md-6">
+							<div class="card aboutcard">
 								<div class="card-body">
 									<h5 class="card-title">My Skills</h5>
-									<p class="card-text">I'm currently studying these front-end fundementals:</p>
-									<ul><li>HTML</li><li>CSS</li><li>Bootstrap</li><li>Javascript</li><li>React</li></ul>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+									<p class="card-text center">I'm currently studying these front-end fundementals:</p>
+								<div class="buttonflex">
+								<a href="https://www.w3schools.com/html/" target="_blank" type="button" class="btn btn-primary btn-lg button-margin">HTML</a>
+									<a href="https://www.w3schools.com/css/" target="_blank" type="button" class="btn btn-primary btn-lg button-margin">CSS</a>
+										<a href="https://www.w3schools.com/js/default.asp" target="_blank" type="button" class="btn btn-primary btn-lg button-margin">Javascript</a>
+										<a href="https://www.w3schools.com/react/default.asp" target="_blank" type="button" class="btn btn-primary btn-lg button-margin">React</a>
+							</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-sm-6">
-							<div class="card ">
+							<div class="card aboutcard">
 								<div class="card-body">
 									<h5 class="card-title">Get in Touch</h5>
-									<p class="card-text">With supporting PerPerspiciatis necessitatibus velit quas sequi autem quae, perferendis facere.spiciatis necessitatibus velit quas sequi autem quae, perferendis facere.text below as a natural lead-in to additional content. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum rem voluptatibus aut quod deleniti sunt dolorem blanditiis incidunt, iste mollitia est reiciendis asperiores doloremque magni ea. Magni quaerat debitis dolorem!</p>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+									<p class="card-text">Why not say hello👋? You can find me on <a class="footer-link" href="mailto:gavinaldred1@gmail.com">email</a>, <a class="footer-link" href="https://www.linkedin.com/in/gavin-aldred-83aa0527/">Linkedin</a>, <a class="footer-link" href="https://github.com/gavinaldred/">GitHub</a>, or you can give me a call on 07825 985 686. </p>
+									
 								</div>
 							</div>
 						</div>
 					</div>
-					</div>
+				</div>
 
 
 
