styles card section background and adds animation effects

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cabin|Roboto:400,700|Roboto+Condensed:400,700" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./images/favicon-32x32.png">
-    <title>Document</title>
+    <title>Gavin Aldred - Bootstrap Portfolio</title>
   </head>
   <body>
     <!-- Navigation Bar -->
@@ -53,8 +53,8 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container jumbo-container">
         <img class="img-fluid rounded-circle" src="images/me.jpg" alt="Picture of Gavin Aldred">
-        <h1 class="display-4">Gavin Aldred Portfolio</h1>
-        <p class="lead">I'm a (learner) web front end developer. I've always loved frontend and now learning what I need to progress my career<span class="animate">.</span></p>
+        <h1 class="display-4">Gavin Aldred Portfolio<span class="animate">.</span></h1>
+        <p class="lead">I'm a (learner) web front end developer. I've always loved frontend code and now I'm learning what I need to progress my career.</p>
       </div>
     </div>
     <!-- Work Section -->
@@ -63,23 +63,23 @@
       <div class="row work-bottom-margin>">
         <!-- Card 1 -->
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-          <div class="card shadow p-3 bg-white rounded">
+          <div class="card shadow p-3 rounded">
             <img src="./images/horiseon_600.jpg" class="card-img-top" alt="Horiseon website image">
             <div class="card-body">
               <h5 class="card-title">Horiseon Refactor</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus velit quas sequi autem quae, perferendis facere.</p>
-              <a href="https://gavinaldred.github.io/challenge1/" class="btn btn-primary">View Horiseon</a>
+              <p class="card-text">Refactor of HTML and CSS to improve the code for accessibility.</p>
+              <a href="https://gavinaldred.github.io/gavinaldred/" class="btn btn-primary">View Horiseon</a>
             </div>
           </div>
         </div>
         <!-- End card 1 -->
         <!-- Card 2 -->
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-          <div class="card shadow p-3 bg-white rounded">
+          <div class="card shadow p-3 rounded">
             <img src="./images/html_cheat600.jpg" class="card-img-top" alt="Screen shot of HTML Cheatsheet">
             <div class="card-body">
               <h5 class="card-title">HTML Cheatsheet</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus velit quas sequi autem quae, perferendis facere.</p>
+              <p class="card-text">A handy cheatsheet that displays all HTML table elements.</p>
               <a href="https://gavinaldred.github.io/gavinaldred/" class="btn btn-primary">View Cheatsheet</a>
             </div>
           </div>
@@ -87,11 +87,11 @@
         <!-- End card 2 -->
         <!-- Card 3 -->
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-          <div class="card shadow p-3 bg-white rounded">
-            <img src="./images/flex_cheat600.jpg"class="card-img-top" alt="Flexbox cheatsheet screenshot">
+          <div class="card shadow p-3 rounded">
+            <img src="./images/flex_cheat600.jpg" class="card-img-top" alt="Flexbox cheatsheet screenshot">
             <div class="card-body">
               <h5 class="card-title">Flexbox Cheatsheet</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus velit quas sequi autem quae, perferendis facere.</p>
+              <p class="card-text">A handy go-to guide for flexbox, built with flex and CSS.</p>
               <a href="https://gavinaldred.github.io/flexbox-cheat-sheet/" class="btn btn-primary">View Flexbox</a>
             </div>
           </div>
@@ -101,11 +101,11 @@
       <div class="row work-bottom-margin">
         <!-- Card 4 -->
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-          <div class="card shadow p-3 bg-white rounded">
+          <div class="card shadow p-3 rounded">
             <img src="./images/design_system600.jpg" class="card-img-top" alt="Screengrab of website design system">
             <div class="card-body">
               <h5 class="card-title">Website Design System</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus velit quas sequi autem quae, perferendis facere.</p>
+              <p class="card-text">A simple website style guide, showing rules for colours, fonts and buttons.</p>
               <a href="https://gavinaldred.github.io/website-design-system/" class="btn btn-primary">View Design System</a>
             </div>
           </div>
@@ -113,11 +113,11 @@
         <!-- End card 4 -->
         <!-- Card 5 -->
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-          <div class="card shadow p-3 bg-white rounded">
+          <div class="card shadow p-3 rounded">
             <img src="./images/bootcamp_600.jpg" class="card-img-top" alt="Screen grab of bootcamp pre-work">
             <div class="card-body">
               <h5 class="card-title">Bootcamp Pre-Work</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus velit quas sequi autem quae, perferendis facere. </p>
+              <p class="card-text">Pre-work for bootcamp, that included elements of HTML, CSS and Javascript. </p>
               <a href="https://gavinaldred.github.io/prework-study-guide/" class="btn btn-primary">View Pre-Work</a>
             </div>
           </div>
@@ -125,11 +125,11 @@
         <!-- End card 5 -->
         <!-- Card 6 -->
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-          <div class="card shadow p-3 mb-5 bg-white rounded">
+          <div class="card shadow p-3 mb-5 rounded">
             <img src="./images/portfolio600.jpg" class="card-img-top" alt="Screen grab of my non bootstrap Portfolio">
             <div class="card-body">
               <h5 class="card-title">Original Portfolio</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus velit quas sequi autem quae, perferendis facere.</p>
+              <p class="card-text">My first Portfolio built with flexbox CSS, grid CSS, semantic HTML and standard CSS rules.</p>
               <a href="https://gavinaldred.github.io/my-portfolio/" class="btn btn-primary">View Original Portfolio</a>
             </div>
           </div>
@@ -137,7 +137,7 @@
       </div>
       <!-- End card 6 -->
     </div>
-    </div>
+   
     <!-- End cards -->
     <!-- Skills Section & Contact -->
     <div id="about" class="container">
@@ -147,7 +147,7 @@
           <div class="card aboutcard">
             <div class="card-body">
               <h5 class="card-title">My Skills</h5>
-              <p class="card-text center">I'm currently studying these front-end fundementals:</p>
+              <p class="card-text center">I'm currently studying and hope to learn these front-end fundementals:</p>
               <div class="buttonflex">
                 <a href="https://www.w3schools.com/html/" target="_blank" type="button" class="btn btn-primary btn-lg button-margin">HTML</a>
                 <a href="https://www.w3schools.com/css/" target="_blank" type="button" class="btn btn-primary btn-lg button-margin">CSS</a>
@@ -161,10 +161,10 @@
           <div class="card aboutcard">
             <div class="card-body">
               <h5 class="card-title">Get in Touch</h5>
-              <p class="card-text">Why not say hello👋? You can find me on <a class="footer-link" href="mailto:gavinaldred1@gmail.com">email</a>, <a class="footer-link" href="https://www.linkedin.com/in/gavin-aldred-83aa0527/">Linkedin</a>, <a class="footer-link" href="https://github.com/gavinaldred/">GitHub</a>, or you can give me a call on 07825 985 686. </p>
+              <p class="card-text">Why not say hello👋? You can find me on <a class="footer-link" href="mailto:gavinaldred1@gmail.com">email</a>, <a class="footer-link" href="https://www.linkedin.com/in/gavin-aldred-83aa0527/">Linkedin</a>, <a class="footer-link" href="https://github.com/gavinaldred/">GitHub</a>, or you can give me a call on 07825 985 686.</p>
             </div>
           </div>
-        </div>
+        </div> 
       </div>
     </div>
     <!-- Footer Section -->
