fixes some html errors

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
               <h5 class="card-title">My Skills</h5>
               <p class="card-text center">I'm currently studying and hope to learn these front-end fundementals:</p>
               <div class="buttonflex">
-                <a href="https://www.w3schools.com/html/" target="_blank" type="button" class="btn btn-primary btn-lg button-margin">HTML</a>
-                <a href="https://www.w3schools.com/css/" target="_blank" type="button" class="btn btn-primary btn-lg button-margin">CSS</a>
-                <a href="https://www.w3schools.com/js/default.asp" target="_blank" type="button" class="btn btn-primary btn-lg button-margin">Javascript</a>
-                <a href="https://www.w3schools.com/react/default.asp" target="_blank" type="button" class="btn btn-primary btn-lg button-margin">React</a>
+                <a href="https://www.w3schools.com/html/" target="_blank" class="btn btn-primary btn-lg button-margin">HTML</a>
+                <a href="https://www.w3schools.com/css/" target="_blank" class="btn btn-primary btn-lg button-margin">CSS</a>
+                <a href="https://www.w3schools.com/js/default.asp" target="_blank" class="btn btn-primary btn-lg button-margin">Javascript</a>
+                <a href="https://www.w3schools.com/react/default.asp" target="_blank" class="btn btn-primary btn-lg button-margin">React</a>
               </div>
             </div>
           </div>
@@ -168,18 +168,18 @@
       </div>
     </div>
     <!-- Footer Section -->
-    <footer class="footer ">
-      <h4>Made with 🔥 by <span ><a class="footer-link" href="https://github.com/gavinaldred" target="_blank" >Gavin</a></span></h4>
+ 
+    <footer class="footer">
+      <h4>Made with 🔥 by <span><a class="footer-link" href="https://github.com/gavinaldred" target="_blank">Gavin</a></span></h4>
       <p>
         © 2022 Gavin Aldred
       </p>
       <section id="contact">
         <div class="contactcolumn">
-          <p><a href="#"></a><button type="button" class="btn btn-primary btn-sm">📱 07825 985686</button></p>
-          <p><a href="mailto:gavinaldred1@gmail.com"><button type="button" class="btn btn-primary btn-sm">✉️ gavinaldred1@gmail.com</button></a></p>
-          <p><a href="https://github.com/gavinaldred/"><button type="button" class="btn btn-primary btn-sm">💻	GitHub</button></a></p>
-          <p> <a href="https://www.linkedin.com/in/gavin-aldred-83aa0527/"><button type="button" class="btn btn-primary btn-sm">🖲️ Linkedin</button></p>
-          </a></p>
+          <p class="btn btn-primary btn-sm footerBtn"><a href="tel:07825985686">📱 07825 985686</a></p>
+          <p class="btn btn-primary btn-sm footerBtn"><a href="mailto:gavinaldred1@gmail.com" >✉️ gavinaldred1@gmail.com</a></p>
+          <p class="btn btn-primary btn-sm footerBtn"><a href="https://github.com/gavinaldred/">💻	GitHub</a></p>
+          <p class="btn btn-primary btn-sm footerBtn"><a href="https://www.linkedin.com/in/gavin-aldred-83aa0527/" >🖲️ Linkedin</a></p>
         </div>
       </section>
     </footer>
